overflow fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -107,6 +107,7 @@ body{
       align-items: center;
       width: 100%; 
       overflow: scroll;
+      overflow: auto;
 
   }
   .sub-container{
